Update control and changelog files.

--- a/anarchistos-exit/debian/changelog
+++ b/anarchistos-exit/debian/changelog
@@ -1,4 +1,4 @@
-anarchistos-exit (1.1) unstable; urgency=low
+anarchistos-exit (1.1) crowbar; urgency=low
 
   * Initial Release.
   * Ported to AnarchistOS.
